--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "gatsby-plugin-react-helmet": "next",
     "isomorphic-fetch": "^2.2.1",
     "lodash": "^4.17.10",
+    "lowdb": "^1.0.0",
     "react": "^16.4.2",
     "react-dom": "^16.4.2",
     "react-helmet": "^5.2.0"
