Add google analytics; add meta.json to keep track of last check time;

--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "bulma": "^0.7.1",
     "cheerio": "^1.0.0-rc.2",
     "gatsby": "next",
+    "gatsby-plugin-google-analytics": "^1.0.31",
     "gatsby-plugin-manifest": "next",
     "gatsby-plugin-offline": "next",
     "gatsby-plugin-react-helmet": "next",
