--- a/package.json
+++ b/package.json
@@ -30,9 +30,12 @@
     "build": "gatsby build",
     "develop": "gatsby develop",
     "format": "prettier --write '**/*.js'",
+    "lint": "eslint .",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "devDependencies": {
+    "babel-eslint": "^9.0.0",
+    "eslint-plugin-react": "^7.11.1",
     "prettier": "^1.14.2"
   },
   "repository": {
