--- a/.travis.yml
+++ b/.travis.yml
@@ -4,10 +4,11 @@ node_js:
 script:
   # Convert shallow clone to full repo so that we can push
   - git fetch --unshallow
+  - git checkout master
   # Scrape for changes, if there are changes, new json files are written
   - yarn scrape
   # Stage changed files and commit (if any)
   - git commit -a -m "Scraped on `date`"
   # Push changes to remote (if any)
-  - git push
+  - git push origin
 sudo: false
