--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,12 @@ script:
   # Scrape for changes, if there are changes, new json files are written
   - yarn scrape
   # Stage changed files and commit (if any)
-  - git commit -a -m "Scraped on `date`"
-  # Push changes to remote (if any)
-  - git push origin
+  - git commit -a -m "Scraped on `date`" || true
+deploy:
+  provider: pages
+  skip-cleanup: true
+  github-token: $GITHUB_TOKEN  # Set in the settings page of your repository, as a secure variable
+  keep-history: true
+  on:
+    branch: master
 sudo: false
