Reset scrape time to previous day and add preceding_period param to include missing entries; update netlify build command to build only (no scraping)

--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
   "scripts": {
     "start": "yarn develop",
     "scrape": "node scraper",
-    "build": "yarn scrape && gatsby build",
+    "build": "gatsby build",
     "develop": "gatsby develop",
     "format": "prettier --write '**/*.js'",
     "lint": "eslint .",
