--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "gatsby": "^2.0.6",
     "gatsby-plugin-google-analytics": "^2.0.6",
     "gatsby-plugin-manifest": "next",
-    "gatsby-plugin-offline": "next",
+    "gatsby-plugin-offline": "^2.0.0-rc.9",
     "gatsby-plugin-react-helmet": "next",
     "gatsby-source-filesystem": "^2.0.1",
     "gatsby-transformer-json": "^2.1.1",
