--- a/package.json
+++ b/package.json
@@ -6,11 +6,12 @@
   "dependencies": {
     "cheerio": "^1.0.0-rc.2",
     "date-fns": "^1.29.0",
+    "eslint": "^5.15.3",
     "gatsby": "^2.0.6",
     "gatsby-plugin-google-analytics": "^2.0.6",
-    "gatsby-plugin-manifest": "next",
+    "gatsby-plugin-manifest": "^2.0.24",
     "gatsby-plugin-offline": "^2.0.0-rc.9",
-    "gatsby-plugin-react-helmet": "next",
+    "gatsby-plugin-react-helmet": "^3.0.10",
     "gatsby-source-filesystem": "^2.0.1",
     "gatsby-transformer-json": "^2.1.1",
     "isomorphic-fetch": "^2.2.1",
